src/components/bs5/promotionalPanel/promotionalPanel.scss
.qld-promo-panel {
  padding: 0;
  .row {
    border-radius: 3rem;
    padding-block: 4rem;
    padding-inline: 3rem;
    background-color: var(--qld-body-bg);
    gap: 2rem;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-areas: "content graphic";
    &>* {
      padding: 0;
    }
    &.content-right {
      grid-template-areas: "graphic content";
      .content-panel {
        align-items: start;
      }
    }
    &.bg-img { 
      background-repeat: no-repeat; 
      background-size: cover;
      .content-panel {
        padding: 4rem;
      }
    }
  }
  .content-panel {
    --icon-bg-colour: var(--qld-default-background-shade);
    --icon-colour: var(--qld-light-action-secondary);
    &.alt {
      --icon-bg-colour: var(--qld-light-alt-background-shade);
      --icon-colour: var(--qld-light-action-secondary);
    }
    &.dark {
      --icon-bg-colour: var(--qld-dark-background-shade);
      --icon-colour: var(--qld-dark-action-secondary);
    }
    &.dark-alt {
      --icon-bg-colour: var(--qld-dark-alt-background-shade);
      --icon-colour: var(--qld-dark-action-secondary);
    }
    grid-area: content;
    background-color: var(--qld-body-bg);
    border-radius: 2rem;
    display: flex;
    flex-direction: column;
    gap: 2rem;
    align-items: end;
    &>* {
      max-width: 65ch;
      padding: 0;
      margin: 0;
      width: 100%;
    }
    .icon-body {
      background: var(--icon-bg-colour);
      border-radius: 4rem;
      height: 4rem;
      width: 4rem;
      display: flex;
      align-items: center;
      justify-content: center;
    }
    .qld-icon {
      --#{$prefix}icon-color: var(--icon-colour);  
      width: 2rem;
      height: 2rem;
      mask-size: 100%;
    }
    .promo-abstract {
      font-size: 1.5rem;
      line-height: 2rem;
    }
    .main {
      display: flex;
      flex-direction: column;
      gap: 1.5rem;
    }
    h2 {
      margin:0;
    }
    ul {
      list-style: none;
    }
    .btn-container {
      display: flex;
      gap: 1rem;
    }
    .cta-container {
      .qld-cta-link {
        width: max-content;
      }
    }
  }
  .image-panel {
    grid-area: graphic;
    .promo-panel-image {
      background: transparent;
      background-repeat: no-repeat; 
      background-size: cover;
      border-radius: 1.25rem;
      width: 100%;
      height: 100%;
    }
  }
  &.contained {
    @include media-breakpoint-down(md) {
      grid-template-columns: 1fr;
      grid-template-areas: "graphic" "content";
      &.content-right {
        grid-template-areas: "graphic" "content";
      }
    }
  }
  &.indent {
    .row {
      border-radius: 0;
      padding: 0;
      background-color: transparent;
      gap:0;
      .content-panel {
        border-radius: 2.5rem;
        border-start-end-radius: 0;
        padding: 4rem;
      }  
      .image-panel {
        .promo-panel-image {
          border-radius: 0;
          border-start-end-radius: 2.5rem;
          border-end-end-radius: 2.5rem;
        }
      }
      &.content-right {
        .content-panel {
          border-start-end-radius: 2.5rem;
          border-start-start-radius: 0;
        }
        .image-panel {
          .promo-panel-image {
            border-radius: 2.5rem;
            border-start-end-radius: 0;
            border-end-end-radius: 0;
          }
        }
      }
    }
  }
  &.indent-text {
    .row {
      .content-panel {
        margin-block-end: -4rem;
      }
    }
  }
  &.indent-img {
    .row {
      .content-panel {
        border-end-end-radius: 0;
      }
      .image-panel {
        margin-block-end: -4rem;
        .promo-panel-image {
          border-radius: 0;
          border-start-end-radius: 2.5rem;
          border-end-end-radius: 2.5rem;
          border-end-start-radius: 2.5rem;
        }
      }
      &.content-right {
        .content-panel {
          border-radius: 0;
          border-start-end-radius: 2.5rem;        
          border-end-end-radius: 2.5rem;
        }
        .image-panel {
          .promo-panel-image {
            border-radius: 2.5rem;
            border-start-end-radius: 0;
          }
        }
        
      }
    }
  }
  @include media-breakpoint-down(lg) {
    .row {
      border-radius: 0;
      padding-block: 3rem;
      padding-inline: 2rem;
      &.bg-img {
        .content-panel {
          padding: 2rem;
        }
      }
    }
    &.indent .row {
      .content-panel {
        border-radius: 0;
        border-end-end-radius: 2.5rem ;
        padding-inline: 3rem;
        padding-block: 4rem;
      }
      .image-panel {
        .promo-panel-image {
          border-radius: 0;
        }
      }
      &.content-right {
        .content-panel {
          border-radius: 0 ;
          border-end-start-radius: 2.5rem ;
        }
        .image-panel {
          .promo-panel-image {
            border-radius: 0;
          }
        }
      }
    }
    &.indent-img .row {
      .image-panel {
        margin-block-end: -2.75rem;
        .image-panel {
          .promo-panel-image {
            border-radius: 0;
            border-end-start-radius: 2.5rem;
          }
        }
      }
      .content-panel {
        border-radius: 0 !important;
      }
      &.content-right {
        .image-panel {
          .promo-panel-image {
            border-radius: 0 !important;
            border-end-end-radius: 2.5rem !important;
          }
        }
      }
    }
  }
  @include media-breakpoint-down(md) {
    .content-panel {
      gap: 1.5rem;
    }
    &.indent .row {
      .content-panel {
        padding-inline: 2rem;
        padding-block: 2.5rem;
      }
    }
  }
  
  // @include media-breakpoint-down(sm) {
  // This is done for iPhone Max screen width being 430px and
  // our current sm is set to 400px.
  @media only screen and (max-width: 430px) {
    .row {
      padding-block: 2.5rem;
      padding-inline: 1rem;
      grid-template-columns: 1fr;
      grid-template-areas: "graphic" "content";
      &.content-right {
        grid-template-areas: "graphic" "content";
      }
      &.bg-img {
        border-radius: 3rem;
        gap:0;
        .content-panel {
          border-radius: 2rem;
        }
        .image-panel {
          height: 0;
        }
      }
    }
    .content-panel {
      border-radius: 0;
      .btn-container {
        flex-direction: column;
        gap: 1.5rem;
        li {
          .btn {
            width: 100%;
          }
        }
      }
    }
    .image-panel {
      .promo-panel-image {
        border-radius: 0.5rem;
        width: 100%;
        height: 9.375rem;
      }
    }
    &.indent .row,
    &.indent .row.content-right {
      background-color: var(--qld-body-bg);
      .image-panel {
        margin-block-end: 0;
        .promo-panel-image {
          border-radius: 0;
          border-end-end-radius: 2.5rem;
        }
      }
      .content-panel {
        margin-block-end: 0;
        padding-inline: 1rem;
      }
    }
  }
}

